--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/sitemap": "^2.4.0",
     "@nuxtjs/toast": "^3.3.1",
     "core-js": "^3.9.1",
+    "diff-match-patch": "^1.0.5",
     "nuxt": "^2.15.3",
     "nuxt-i18n": "^6.27.0"
   },
